--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "budo index.js --open -- -t babelify"
+    "start": "budo src/index.js --dir src --open -- -t babelify"
   },
   "keywords": [],
   "author": "Michael Mathews <mmathews87@gmail.com> (http://letsgojuno.com)",
@@ -25,6 +25,7 @@
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "redux-form": "^5.3.2",
     "redux-thunk": "^2.1.0"
   }
 }
