--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "budo": "^8.3.0"
   },
   "dependencies": {
+    "form-serialize": "^0.7.1",
     "lodash.debounce": "^4.0.7",
     "material-ui": "^0.15.3",
     "moment": "^2.14.1",
