--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-form": "^5.3.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "validate": "^3.0.1"
   }
 }
