--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "budo src/index.js --dir src --open -- -t babelify",
-    "build": "webpack"
+    "build": "webpack --config ./ops/webpack.config.js"
   },
   "keywords": [],
   "author": "Michael Mathews <mmathews87@gmail.com> (http://letsgojuno.com)",
   "license": "MIT",
   "devDependencies": {
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
-    "budo": "^8.3.0"
+    "budo": "^8.3.0",
+    "json-loader": "^0.5.4",
+    "webpack": "^2.1.0-beta.20"
   },
   "dependencies": {
     "form-serialize": "^0.7.1",
