--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "budo src/index.js --dir src --open -- -t babelify",
-    "build": "webpack --config ./ops/webpack.config.js"
+    "build": "npm run clean && npm run copy & npm run webpack",
+    "webpack": "webpack --config ./ops/webpack.config.js",
+    "clean": "rm -r dist/*",
+    "copy": "copyfiles -f src/index.html dist",
+    "serve": "budo -d dist --open"
   },
   "keywords": [],
   "author": "Michael Mathews <mmathews87@gmail.com> (http://letsgojuno.com)",
@@ -18,6 +22,8 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "budo": "^8.3.0",
+    "copy": "^0.3.0",
+    "copyfiles": "^1.0.0",
     "json-loader": "^0.5.4",
     "webpack": "^2.1.0-beta.20"
   },
